--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "22.10.5",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.4",
+    "eslint": "^9.18.0",
+    "eslint-config-next": "^15.1.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
