--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
     "react-datepicker": "^7.6.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-swipeable-views": "^0.14.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
